# pointcloud-object-detection

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
IsaacSim/: AGV_Warehouse.usd
config/: detection_params.yaml
docker/: Dockerfile.jp6  docker-compose.yml
launch/: detection.launch.py
models/: README.md
pointcloud_detection_3d/: __init__.py  detection_utils.py  detector.py  pointpillars_trt.py
rviz/: detection.rviz
scripts/: benchmark.py  detection_node.py  download_models.py  pointpillars_inference.py
